field made to size

--- a/capstone_project_1/landing_page.css
+++ b/capstone_project_1/landing_page.css
@@ -8,6 +8,11 @@ table{
     font-family: 'Ubuntu', sans-serif;
 }
 
+.field{
+    width: 250px;
+    height: 40px;
+}
+
 .button {
     background-color: #ffbb3d;
     height:70px ;
